<resources>
    <string name="app_name">Open El Espinar</string>
    <string name="action_settings">Ajustes</string>
    <string name="select_app">Seleccione aplicación</string>
    <string name="dialog_title">Compruebe estado de la red</string>
    <string name="dialog_text">Necesita conexión a Internet para poder ver los cuadros actualizados</string>
    <string name="dialog_positive_button">Entendido</string>
    <string name="dialog_negative_button">Cancelar</string>
    <string name="dialog_download">Descargando cuadros...</string>
    <string name="dialog_error">Descarga fallida</string>
    <string name="dialog_long">La descarga se está alargando...</string>
    <string name="toast_download_cancel">Descarga cancelada. Compruebe el estado de la red</string>
    <string name="text_view_cancel">La descarga ha fallado. Compruebe el estado de la red y deslice para descargar los cuadros de nuevo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">Fragment one</string>
    <string name="coming">Coming soon</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="news_name">Noticias</string>
    <string name="news_tournament">Torneo</string>
    <string name="news_sport">Deporte</string>
    <string name="news_communication">Comunicación</string>
    <string name="news_did_you_know">¿Sabías que...?</string>
    <string name="atp_name">ATP Challenger</string>
    <string name="atp_challenger_individual">Individual</string>
    <string name="atp_challenger_doubles">Dobles</string>
    <string name="atp_challenger_previous">Fase previa</string>
    <string name="atp_challenger_order">Orden de Juego ATP</string>
    <string name="fem_name">Torneo ITF Femenino</string>
    <string name="tournament_name">El Torneo</string>
    <string name="tournament_position">Cómo llegar</string>
    <string name="tournament_tournament_data">Datos del torneo</string>
    <string name="tournament_virtual_tour">Tour virtual</string>
    <string name="tournament_trophies">Trofeos exclusivos</string>
    <string name="tournament_contact">Contacto</string>
    <string name="tournament_info">
        Nos encontramos en Carretera de La Garganta, 40400 La Estación de El Espinar, Segovia.\n
        Puedes llegar hasta aquí en coche, autobús o tren.</string>
    <string name="tournament_how_to">Para más información visita el siguiente enlace:</string>
    <string name="tournament_how_to_bt">Turismo El Espinar</string>
    <string name="tournament_bus">En autobús con La Selpulvedana: </string>
    <string name="tournament_bus_bt">La Sepulvedana</string>
    <string name="tournament_train">En tren desde Madrid-Chamartín:</string>
    <string name="tournament_train_bt">Renfe</string>
    <string name="tournament_maps">Llévame hasta allí:</string>
    <string name="tournament_maps_bt">Google Maps</string>
    <string name="tournament_data_title">Elegido por la ATP y la ITF \'Mejor Torneo Challenger del mundo 2009\'</string>
    <string name="tournament_data_text">Total premios: 64.500 euros más hospitalidad.\n\n
        Supervisor ATP: Carl Baldwin / Poncho Ayala.\n\n
        Juez Árbitro: Víctor Gasol.\n\n
        Superficie: pista rápida (Tennislife).\n\n
        Pelota oficial: Babolat.\n\n
        Cuadro individual: 32 jugadores\n
        (24 por clasificación directa, 4 wild cards y 4 procedentes de la fase previa).\n\n
        Cuadro de dobles: 16 parejas\n
        (13 por clasificación directa y 3 wild cards).\n\n
        Hotel oficial: Hotel Tryp Náya \n Avda. de Venecia s/n. Urbanización Los Ángeles de San Rafael, El Espinar. Segovia.
        Lugar de celebración del torneo: Complejo deportivo municipal Open Castilla y León\n\n
        Carretera de la Garganta s/n. Estación de El Espinar. Segovia.</string>
    <string-array name="tournament_data_round">
        <item>INDIVIDUALES</item>
        <item>Campeón</item>
        <item>Finalista</item>
        <item>Semifinalista</item>
        <item>Cuartofinalista</item>
        <item>2ª ronda</item>
        <item>1ª ronda</item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="tournament_data_round_double">
        <item>DOBLES</item>
        <item>Campeón</item>
        <item>Finalista</item>
        <item>Semifinalista</item>
        <item>Cuartofinalista</item>
        <item>1ª ronda</item>
        <item></item>
    </string-array>
    <string-array name="tournament_data_points">
        <item>PUNTUACIÓN ATP</item>
        <item>100 puntos</item>
        <item>60 puntos</item>
        <item>35 puntos</item>
        <item>18 puntos</item>
        <item>8 puntos</item>
        <item>0 puntos</item>
        <item>Total</item>
        <item></item>
    </string-array>
    <string-array name="tournament_data_points_double">
        <item>PUNTUACIÓN ATP</item>
        <item>100 puntos</item>
        <item>60 puntos</item>
        <item>35 puntos</item>
        <item>18 puntos</item>
        <item>8 puntos</item>
        <item>Total</item>
    </string-array>
    <string-array name="tournament_data_prize">
        <item>PREMIO</item>
        <item>9200€</item>
        <item>5400€</item>
        <item>3250€</item>
        <item>1850€</item>
        <item>1100€</item>
        <item>660€</item>
        <item>21460€</item>
        <item></item>
    </string-array>
    <string-array name="tournament_data_prize_double">
        <item>PREMIO</item>
        <item>3950€</item>
        <item>2350€</item>
        <item>1380€</item>
        <item>850€</item>
        <item>460€</item>
        <item>9990€</item>
    </string-array>
    <string name="tournament_trophies_title">Las joyas de cristal de La Granja acreditan a los campeones del ATP Challenger El Espinar</string>
    <string name="tournament_trophies_subtitle">Piezas exclusivas de la Real Fábrica segoviana para los finalistas del torneo</string>
    <string name="tournament_trophies_text1">Como desde los albores del torneo, la Fundación Centro Nacional del Vidrio de la Real Fábrica de Cristales de La Granja es la encargada de la producción de los trofeos destinados a los campeones y subcampeones del ATP Challenger Open Castilla y León Villa de El Espinar, tanto en categoría individual como en dobles.</string>
    <string name="tournament_trophies_text2">También en las nueve primeras ediciones del torneo de selecciones autonómicas, los cadetes campeones accedieron a los exclusivos vasos de cristal de La Granja.

Este único y representativo galardón del ATP Challenger segoviano es pieza exclusiva construida a partir de originales e inspiraciones del siglo XVIII.</string>
    <string name="tournament_trophies_text3">Se trata, por tanto, de reproducciones de piezas históricas pero cuyas terminaciones, tallado y decoración son exclusivas del torneo de tenis.

Trofeos elaborados, de forma absolutamente artesanal, en cristal plomo soplado a boca y tallado a la rueda, característica esencial de las manufacturas de la Real Fábrica de La Granja.</string>
    <string name="tournament_contact_open">Para contactar con el Open Castilla y León de Tenis:</string>
    <string name="tournament_contact_secretary">Secretaría del torneo (Tlf)</string>
    <string name="tournament_contact_secretary_phone">921 18 80 72</string>
    <string name="tournament_contact_office">Oficina de prensa (Tlf)</string>
    <string name="tournament_contact_office_phone">921 18 80 92</string>
    <string name="tournament_contact_before1">Para contactar con el Open Castilla y León de Tenis antes del Torneo:</string>
    <string name="tournament_contact_before2">Calle Ferraz, 49 1-D Madrid 28008</string>
    <string name="tournament_contact_before_phone">Teléfono</string>
    <string name="tournament_contact_before_phone_number">915 48 92 81</string>
    <string name="tournament_contact_before_email">E-mail</string>
    <string name="tournament_contact_before_email_address">organizacion@teniselespinar.com</string>
    <string name="tournament_contact_com">Departamento de Comunicación</string>
    <string name="tournament_contact_com_email_address">comunicacion@teniselespinar.com</string>
    <string name="tournament_contact_com_number">619 27 77 08</string>
    <string name="history_name">Historia</string>
    <string name="history_stats">Estadísticas deportivas</string>
    <string name="history_players">Jugadores ilustres en el torneo</string>
    <string name="history_single">Palmarés Individual</string>
    <string name="history_doubles">Palmarés dobles</string>
    <string name="history_values">Valores del torneo</string>
    <string name="history_awards">Galadornes</string>
    <string name="history_committee">Comités</string>
    <string name="history_data_title">Datos históricos</string>
    <string name="history_data_text">
        El Open Castilla y León Villa de El Espinar es uno de los ATP Challenger más reconocidos en el mundo y uno de los de más larga vida.\n\n

En los primeros 28 años de vida del torneo espinariego han ondeado las banderas de más de 60 países de los cinco continentes, en correspondencia con los jugadores asistentes; lo que supone que casi un tercio de los estados reconocidos en el planeta han tenido representación en el ATP Challenger segoviano.\n\n

La edición de 2012 estuvo entre las seis importantes, por orden de mayor presencia de países en los 28 años de historia del torneo; siendo, además, un año especial en cuanto a la pluralidad en las últimas rondas de individual y dobles. En 2012 tomaron parte jugadores de 22 países, por las 19 naciones representadas en la edición de 2013, las 18 de 2007 y las 17 de 2008, 2006, 2005 y 2000.\n\n

En individuales, hubo ocho ediciones anteriores con presencia de jugadores de cuatro países diferentes, siendo la de 2012 la sexta en la que no hubo españoles.\n\n

Desde 1992 ha habido presencia de franceses en 13 finales, entre 2013 y 2009 de forma consecutiva (cinco subcampeones); con un total de 7 campeones y 7 subcampeones franceses, incluso una final gala al completo, la de 2004 entre Paul-Henri Mathieu y Nicolas Mahut.\n\n

También hubo final entre paraguayos en 1987.\n\n

Tres finales españolas en 1986, 1988 y 1990 (gana Emilio). Las dos primeras con presencia de ‘Pepo’ Clavet y las dos siguientes con presencia de ‘Pato’ Clavet.\n\n

Con la victoria de Donskoy en 2012, hasta 2013 (inclusive), ha habido finalistas de dieciséis países diferentes de Europa, América, Asía y Oceanía: España, Estados Unidos, Holanda, Paraguay, Argentina, Uzbekistán, Francia, Austria, República Checa, Alemania, Ucrania, Taiwan, Australia, Brasil, Eslovaquia y Rusia, por ese orden cronológico.\n\n

Y campeones de diez nacionalidades: España, Paraguay, Argentina, Francia, Austria, República Checa, Alemania, Ucrania, Eslovaquia y Rusia.\n\n

Alemania ha tenido cinco presencias en finales, con sólo una victoria, y Argentina tres, las tres fueron victorias.\n\n

Se han dado once triunfos españoles y nueve subcampeonatos.\n\n

‘Pepo’ Clavet, único español que ha ganado dos veces El Espinar. El otro con dos victorias en singles es el francés Rodolphe Gilbert.\n\n
    </string>
    <string name="history_single_title">Campeones anuales individuales</string>
    <string name="atp_item">ATP Challenger</string>
    <string name="fem_item">Torneo ITF Femenino</string>
    <string name="tournament_item">El Torneo</string>
    <string name="tickets_item">Entradas</string>
    <string name="news_item">Noticias</string>
    <string name="activities_item">Actividades</string>
    <string name="history_item">Historia</string>
</resources>